	  Dean Camera.
	* examples/nsh -- Correct an usage of getopt(): If you stop calling getopt()
	  before all parameters are parsed, you can leave getopt() in a strange state.
	* include/nuttx/fb.h -- Restore missing RGB type that was accidentally removed
	  when Nokia 6100 support was added.
	* Rename arch/pjrc-8051 to arch/8051
	* configs/ne64badge -- Add a configuration for the Future Electronics Group
	  NE64 Badge development board (Freescale MC9S12NE64)
	* Changes contributed by Uros Platise:
	  - Add support for the STM32F103RET6
	  - configs/vsn - Support for the ISOTEL NetClamps VSN V1.2 ready2go sensor
	    network platform
	* arch/hc, configs/ne64badge -- Development is complete for the Freescale
	  mc9s12ne64 on the Future Electronics Group NE64 /PoE Badge board.  Howeve,
	  this port remains untested until I figure out this BDM / Code Warrior
	  and paged build thing
	* Added a new 'kill' command to NSH that will support sending signals to
	  running NuttX tasks.

5.19 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* NSH: 'mem' command renamed to 'free'.  Output is now more similar to the
	  Linux 'free' command.
	* NSH: Correct a redirection bug in NSH.  The following would not work; it
	  resulted in a hang after the 'cat /dev/fifo':

	    nsh> mkfile /dev/fifo
	    nsh> cd /tmp             # /tmp is a mounted RAM disk
	    nsh> cat /dev/fifo > test.txt &
	    nsh> echo "This is a test" > /dev/fifo

	  The error was caused because (1) there was a path that resulted in stdout
	  being closed (the "hang") and also (2) the 'cat' command was always outputting
	  to stdout, not to the redirected file descriptor.  Now:

	    nsh> cat test.txt
	    This is a test

	* drvers/pipes/pipe_common.c:  Driver open method eas not returning an EINTR
	  error when it received a signal.  Instead, it just re-started the wait.  This
	  makes it impossible to kill a background pipe operation from NSH.
