@@ -87,6 +87,10 @@ o Memory Managment (mm/)
   Description: Add an option to free all memory allocated by a task when the
                task exits. This is probably not be worth the overhead for a
                deeply embedded system.
+               There would be complexities with this implementation as well
+               because often one task allocates memory and then passes the
+               memory to another:  The task that "owns" the memory may not
+               be the same as the task that allocated the memory.
   Status:      Open
   Priority:    Medium/Low, a good feature to prevent memory leaks but would
                have negative impact on memory usage and code size.
